[37000665] Bugfix: increased the height of soundcloud title to prevent cropping
Note: this will currently only handle a single line of tilte

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -917,7 +917,7 @@ li {
   position: absolute;
   float: left;
   width: 92%;
-  height: 26px;
+  height: 40px;
   left: 45px;
   overflow: auto;
   margin-top: 8px;
